samples/_failures_safe/1761163482_cc6223_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fecd428d.c: In function ‘main’:
./samples/SAFE/__tmp_fecd428d.c:161:9: error: expected declaration or statement at end of input
  161 |         buffer_free(&input_buf);
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_fecd428d.c:161:9: error: expected declaration or statement at end of input
